# tp_math

./: CMakeLists.txt  main.c  score.txt
include/: Multiplication.h  addition.h  divisions.h  fichier.h  justeprix.h  menu.h  nombre.h  operations.h  problemes.h  soustraction.h  table_de_multiplication.h  table_de_mutliplication.h
src/: Multiplication.c  addition.c  divisions.c  fichier.c  justeprix.c  menu.c  nombre.c  operations.c  problemes.c  soustraction.c  table_de_multiplication.c  table_de_mutliplication.c
